--- a/config.yaml
+++ b/config.yaml
@@ -1,38 +1,34 @@
 # exp: TextClassification
-
-# mode: 
+# mode:
 #     - train
 
-# models: 
-#       hf_text_classification_model:
-#           - gpt2
+# models:
+#     hf_text_classification_model:
+#         - bert-base-uncased
 
-# labelLabel: label
 # textLabel: text
+# labelLabel: label
 # id2label:
-#     0 : Negative
-#     1 : Positive
-          
-# trainfpath: midterm/traindata.tsv
-# validfpath: midterm/validdata.tsv
-#specify models 1-3
-# modelfpath: midterm/gpt2model3
+#     0: Negative
+#     1: Positive
 
-exp: TextClassification
+# trainfpath: nlp_midterm/traindata.tsv
+# validfpath: nlp_midterm/evaldata.tsv
+# modelfpath: nlp_midterm/trained_bert_3
+      
+
+exp: TextClassification  
 
 mode:
-    - evaluate
+  - evaluate 
 
-models: 
-      hf_text_classification_model:
-          - midterm/gpt2model3
-          #specify models 1-3
+models:
+    hf_text_classification_model:
+        - nlp_midterm/trained_bert_1
 
-datafpath: midterm/evaldatatest.tsv
+datafpath: nlp_midterm/evaldatatest.tsv
+predfpath: nlp_midterm/bert_trained_eval1.tsv
 
-predfpath: midterm/gpt2model3Eval.tsv
-#specify models 1-3
 
-id2label:
-    0 : Negative
-    1 : Positive
+
+
